# Axum_todolist

./: .env  Cargo.toml  README.md  docker-compose.yml
backend/lessons/data/: Cargo.toml
backend/lessons/data/src/: lib.rs
backend/lessons/data/src/routes/: create_task.rs  delete_tasks.rs  get_tasks.rs  guard.rs  hello_world.rs
backend/lessons/data/src/routes/utils/: app_error.rs
backend/lessons/routing/: Cargo.toml
backend/lessons/routing/src/: lib.rs  main.rs
backend/lessons/routing/src/routes/: custom_response.rs  set_custom_middleware.rs  string_type.rs  tickets.rs
backend/practice/data/src/: main.rs
backend/practice/data/src/routes/: custom_json_extractor.rs  mod.rs  partial_update_tasks.rs  update_tasks.rs  user.rs  validate_json.rs
backend/practice/routing/src/routes/: error_state.rs  header.rs  json.rs  middleware.rs  mod.rs  path_variable.rs  query_params.rs
backend/project_solution/: .env  Cargo.toml
backend/project_solution/src/: config.rs  lib.rs  main.rs  router.rs
backend/project_solution/src/middleware/: mod.rs  request_authentication.rs
backend/project_solution/src/routes/: hello_world.rs
backend/project_solution/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
backend/project_solution/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
backend/project_solution/src/utilities/: app_error.rs  hash_table.rs  jwt.rs  mod.rs
integration-tests/backend-tests/: .env  api.test.js  package-lock.json
(+1 files in other folders)
