[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
prost = "0.7"
serde = { version = "1.0.163", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
axum = { version = "0.6.1", features = ["headers","macros"] }
